# assetfaction

./: .gitignore  README.md
backend/: README.md  __init__.py  api_demo.py  main.py  pyproject.toml  requirements.txt  setup.py
backend/api/: __init__.py
backend/api/routes/: __init__.py  assets.py  kyc.py  mirror.py  rewards.py  wallet.py
backend/database/: __init__.py  database.py
backend/models/: __init__.py  models.py
backend/schemas/: __init__.py  schemas.py
backend/services/: __init__.py  hedera_service.py  mirror_service.py  scheduler.py
backend/tests/: __init__.py  test_main.py
backend/utils/: __init__.py  auth.py  config.py
contracts/: .env.example  foundry.toml  package.json
contracts/script/: SimpleDeploy.s.sol
contracts/src/: AssetFractionCore.sol  SimpleAssetRegistry.sol
contracts/src/utils/: Counter.sol
contracts/test/: AssetFractionCore.t.sol  SimpleAssetRegistry.t.sol
docs/: AssetFraction.md  AssetFractionBackendPRD.md  frontend-overview.md  frontend-prd.md  frontend-usage.md  hashgraphHSC10.md
frontend/: .gitignore  package-lock.json
frontend/assetfraction-frontend/: .gitignore  README.md  jest.config.js  package-lock.json  package.json  tailwind.config.js
frontend/assetfraction-frontend/__tests__/: app.test.tsx
frontend/assetfraction-frontend/app/: enhanced-styles.css  globals.css  page-backup.tsx  page.tsx
frontend/assetfraction-frontend/components/: enhanced-landing.tsx  simple-enhanced-landing.tsx
frontend/assetfraction-frontend/types/: index.ts
